--- a/t/te/tee/teenidols4you.com.html
+++ b/t/te/tee/teenidols4you.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the teenidols4you.com privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607014854id_/http%3A//teenidols4you.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the teenidols4you.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206200404id_/http%3A//www.teenidols4you.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>TeenIdols4You.com | Feedback Form</title>
 
@@ -27,6 +27,9 @@
 }
 .ugo_font_body {
 	FONT-SIZE: 10px; COLOR: #ffffff; FONT-FAMILY: verdana
+}
+.ugo_font_tables{
+       FONT-SIZE: 10px; COLOR: #000000; FONT-FAMILY: verdana
 }
 .ugo_link:link {
 	COLOR: #ffffff
@@ -129,7 +132,8 @@ dc.write('/w/get.media?sid=352&tm=12&m=4&tp=4&c='+mjo+'"></scr'+'ipt>');}} // --
                 <td><img height="34" src="http://www.teenidols4you.com/im_files/underground.gif" width="415" border="0"></td>
                 <td><img height="34" src="http://www.teenidols4you.com/im_files/masthead_glow.gif" width="249" border="0"></td></tr></tbody></table></td>
           <td><img height="34" src="http://www.teenidols4you.com/im_files/spacer.gif" width="1" border="0"></td>
-          <td width="100%"><img height="1" src="http://www.teenidols4you.com/im_files/spacer.gif" width="1" border="0"></td></tr>
+          <td width="100%" align="right"><img height="1" src="http://www.teenidols4you.com/im_files/spacer.gif" width="1" border="0"><font color="#ffffff">
+</font></td></tr>
         <tr>
           <td>
             <table cellspacing="0" cellpadding="0" width="100%" border="0">
@@ -139,7 +143,7 @@ dc.write('/w/get.media?sid=352&tm=12&m=4&tp=4&c='+mjo+'"></scr'+'ipt>');}} // --
                   : <a class="ugo_link" href="/news.html">ENTERTAINMENT NEWS</a>
 		  : <a class="ugo_link" href="/Actors.html">ACTOR PICTURES</a> 
                   : <a class="ugo_link" href="/Singers.html">SINGER PICTURES</a> 
-                  : <a class="ugo_link" href="/odp.html">SEARCH THE WEB</a> 
+                  : <a class="ugo_link" href="/search/odp.php">SEARCH THE WEB</a> 
                   </td></tr></tbody></table></td>
           <td><img height="20" src="http://www.teenidols4you.com/im_files/spacer.gif" width="1" border="0"></td>
           <td width="100%"><img height="1" src="http://www.teenidols4you.com/im_files/spacer.gif" width="1" border="0"></td></tr>
@@ -151,7 +155,7 @@ dc.write('/w/get.media?sid=352&tm=12&m=4&tp=4&c='+mjo+'"></scr'+'ipt>');}} // --
                 <td class="ugo_font_small" align="left"> 
 
 <!-- second logo links -->
-<a href="/cd.html" title="GET OUR PICTURES ON CD"><font class="ugo_font_small2">PICTURES ON CD</font></a> : <a href="/games.html" title="Free ONLINE Games"><font class="ugo_font_small2">GAMES</font></a> : <a href="/review.html" title="MOVIE REVIEWS"><font class="ugo_font_small2">MOVIE REVIEWS</font></a> : <a href="/chat/index.html" title="ONLINE CHAT"><font class="ugo_font_small2">ONLINE CHAT</font></a> : <a href="/phpBB2/index.php" title="Forum"><font class="ugo_font_small2">FORUM</font></a> : <a href="/list.php" title="MAILING LIST"><font class="ugo_font_small2">MAILING LIST</font></a><font class="ugo_font_small2"><font> : <a href="/feedback.html" title="FEEDBACK"><font class="ugo_font_small2">FEEDBACK</font></a>
+<a href="/cd.html" title="GET OUR PICTURES ON CD"><font class="ugo_font_small2">PICTURES ON CD</font></a> : <a href="/games.html" title="Free ONLINE Games"><font class="ugo_font_small2">GAMES</font></a> : <a href="/review.html" title="MOVIE REVIEWS"><font class="ugo_font_small2">MOVIE REVIEWS</font></a> : <a href="/chat/index.html" title="ONLINE CHAT"><font class="ugo_font_small2">ONLINE CHAT</font></a> : <a href="/phpBB2/index.php" title="Forum" target="blank"><font class="ugo_font_small2">FORUM</font></a> : <a href="/list.php" title="MAILING LIST"><font class="ugo_font_small2">MAILING LIST</font></a><font class="ugo_font_small2"><font> : <a href="/feedback.html" title="FEEDBACK"><font class="ugo_font_small2">FEEDBACK</font></a>
 
 		</font></font></td></tr></tbody></table>
 		</td>
@@ -176,7 +180,7 @@ dc.write('/w/get.media?sid=352&tm=12&m=4&tp=4&c='+mjo+'"></scr'+'ipt>');}} // --
           <td><img src="http://www.teenidols4you.com/im_files/blk.gif" border="0"></td>
           <td background="http://www.teenidols4you.com/im_files/top_story_bg.gif"><img height="1" src="http://www.teenidols4you.com/im_files/spacer.gif" width="104" border="0"></td>
           <td width="100%" colspan="22" background="http://www.teenidols4you.com/im_files/top_story_bg_blue.gif"><img src="http://www.teenidols4you.com/im_files/feature_blue_lines.gif" border="0"></td></tr></tbody></table></td></tr>
-  <tr valign="top" bgcolor="#3b5476"><td bgcolor="#3b5476">
+  <tr valign="top" bgcolor="#3b5476"><td bgcolor="#3b5476" width="100%">
 <center>
 <!-- FASTCLICK.COM 468x60 and 728x90 Banner CODE for teenidols4you.com -->
 <script language="javascript" src="http://media.fastclick.net/w/get.media?sid=352&amp;m=1&amp;tp=5&amp;d=j&amp;t=n"></script>
@@ -186,7 +190,7 @@ width=728 height=90 border=1></a></noscript>
 <!-- FASTCLICK.COM 468x60 and 728x90 Banner CODE for teenidols4you.com -->
 <br><br>
 <!-- body_text //-->
-    <table border="0" width="95%" cellspacing="0" cellpadding="0">
+    <table border="0" width="95%" cellspacing="0" cellpadding="0" bgcolor="#ffffff">
       <tbody><tr>
         <td><table border="0" width="100%" cellspacing="0" cellpadding="0">
           <tbody><tr>
@@ -198,7 +202,7 @@ width=728 height=90 border=1></a></noscript>
       <tr>
         <td><br><table border="0" width="100%" cellspacing="0" cellpadding="2">
           <tbody><tr>
-<td><div class="xsmall"><font face="arial,helvetica" size="-1">Thank you for visiting www.teenidols4you.com . Teen Idols 4 You is committed to honoring and protecting your privacy while at the same time providing you with a first rate on-line experience. As an important part of respecting your privacy, we believe that you have the right to know what information is collected by this Web site, how such information may be used, and what security measures are taken to protect your information. 
+<td><div class="xsmall"><blockquote><font face="arial,helvetica" size="-1">Thank you for visiting www.teenidols4you.com . Teen Idols 4 You is committed to honoring and protecting your privacy while at the same time providing you with a first rate on-line experience. As an important part of respecting your privacy, we believe that you have the right to know what information is collected by this Web site, how such information may be used, and what security measures are taken to protect your information. 
 <p>
 <b>Collection and Use of Information </b>
 </p><p>
@@ -232,7 +236,7 @@ If you do not wish to receive e-mail from us in the future regarding special off
 <b>Third Party Sites</b> 
 </p><p>
 Our Web site may contain links to other sites maintained by third parties unrelated to Teen Idols 4 You. While we of course attempt to link only to reputable sites, please be aware that we do not monitor and is in no way responsible for the content or privacy practices of any such third party sites. 
-</p></font></div><font face="arial,helvetica" size="-1">
+</p></font></blockquote></div><font face="arial,helvetica" size="-1">
 </font></td>
 
           </tr>
@@ -241,13 +245,15 @@ Our Web site may contain links to other sites maintained by third parties unrela
     </tbody></table>
 <!-- body_text_eof //-->
 <br><br></center></td><td valign="top" colspan="4">
-<!-- FASTCLICK.COM 160x600 and 120x600 SKYSCRAPER CODE for teenidols4you.com -->
+<!-- FASTCLICK.COM 120x600 and 160x600 SkyScraper CODE for teenidols4you.com -->
 <script language="javascript" src="http://media.fastclick.net/w/get.media?sid=352&amp;m=3&amp;tp=7&amp;d=j&amp;t=n"></script>
 <noscript><a href="http://media.fastclick.net/w/click.here?sid=352&m=3&c=1" target="_blank">
 <img src="http://media.fastclick.net/w/get.media?sid=352&m=3&tp=7&d=s&c=1"
 width=160 height=600 border=1></a></noscript>
-<!-- FASTCLICK.COM 160x600 and 120x600 SKYSCRAPER CODE for teenidols4you.com -->
-</td></tr></tbody></table>
+<!-- FASTCLICK.COM 120x600 and 160x600 SkyScraper CODE for teenidols4you.com -->
+</td>
+<td width="6">&nbsp;</td>
+</tr></tbody></table>
 	<center>
 <hr width="95%">
 
@@ -262,13 +268,12 @@ width=160 height=600 border=1></a></noscript>
           <td valign="top"> 
             <p align="center"><font color="#ffffff" face="Verdana" size="1">The site runs best with IE 5.0+, using at least a resolution of 1024x768 in true color<br>
 <a class="ugo_link" href="/privacy.html">Privacy Policy</a>
- (Copyright (c) 2004 <a class="ugo_link" href="http://www.galacticstudio.com" target="blank">Galactic Studio</a>)
+ (Copyright (c) 2004 <a class="ugo_link" href="http://www.galacticstudio.com" target="blank">Galactic Studio</a>) <a class="ugo_link" href="http://compu.deepspace6.com" target="_blank">Compu.DeepSpace6.com</a>
             </font></p></td>
           <td></td></tr></tbody></table>
 </td></tr></tbody></table>
 
-       <!-- START OF MNM-STATS CODE -->
-     <script language="JavaScript" src="http://ww2.classiccode.com/statspro_demo/mnm_stats.js"></script> 
-       <!-- END OF MNM-STATS CODE -->
+<script language="javascript" src="http://www.classiccode.com/stats/php-stats.js.php"></script>
+<noscript><img src="http://www.classiccode.com/stats/php-stats.php" border="0" alt=""></noscript>
 
 </center></body></html>
