--- a/k/kc/kcp/kcpl.com.html
+++ b/k/kc/kcp/kcpl.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kcpl.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604184242id_/http%3A//kcpl.com/reports/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kcpl.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206201430id_/http%3A//kcpl.com/reports/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>KCP&amp;L - Privacy &amp; Security statement</title>
@@ -39,6 +39,9 @@
 		<table cellpadding="0" cellspacing="0" border="0" width="122">
 			<tbody><tr>
 				<td><a href="http://www.kcpl.com/index.html"><img src="images/nav/top.gif" alt="" width="122" height="55" border="0"></a></td>
+			</tr>
+			<tr>
+				<td><img src="images/whitebrick.gif" alt="" width="122" height="10" border="0"></td>
 			</tr>
 			<tr>
 				<td background="images/nav/bg.gif">
