--- a/r/re/rea/realbeer.com.html
+++ b/r/re/rea/realbeer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the realbeer.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605073000id_/http%3A//www.realbeer.com/shared/privacy/index.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the realbeer.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206202252id_/http%3A//www.realbeer.com/shared/privacy/index.php) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Realbeer.com: Privacy Statement</title>
@@ -38,7 +38,7 @@ document.write('<IMG SRC="http://oasis.realbeer.com/oasisi.php?s=48&w=468&h=60&c
 document.write(' WIDTH=468 HEIGHT=60 BORDER=0></A>');
 document.write('</IFRAME>'); 
 // --> 
-</script><iframe src="http://oasis.realbeer.com/oasisi-i.php?s=48&amp;w=468&amp;h=60&amp;cb=1580357658734" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><A HREF="http://oasis.realbeer.com/oasisc.php?s=48&w=468&h=60&cb=1580357658734"><IMG SRC="http://oasis.realbeer.com/oasisi.php?s=48&w=468&h=60&cb=1580357658734" WIDTH=468 HEIGHT=60 BORDER=0></A></iframe>
+</script><iframe src="http://oasis.realbeer.com/oasisi-i.php?s=48&amp;w=468&amp;h=60&amp;cb=1580357659481" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="468" height="60"><A HREF="http://oasis.realbeer.com/oasisc.php?s=48&w=468&h=60&cb=1580357659481"><IMG SRC="http://oasis.realbeer.com/oasisi.php?s=48&w=468&h=60&cb=1580357659481" WIDTH=468 HEIGHT=60 BORDER=0></A></iframe>
 <noscript>
 <IFRAME SRC="http://oasis.realbeer.com/oasisi-i.php?s=48&w=468&h=60"
 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0
@@ -81,13 +81,13 @@ WIDTH=468 HEIGHT=60 BORDER=0></A>
 	<td width="130">
 &nbsp;<br>
 <div class="bodycopy">
-<b><font color="ffffff">Jun 05, 2004</font></b></div>
+<b><font color="ffffff">Dec 06, 2004</font></b></div>
 <p>
 </p><div class="subhead"><font color="ffffff">BeerLog</font></div>
 <table bgcolor="ffcc00">
 <tbody><tr><td>
 <div class="small">
-Norwegian authorities have ordered retailers to <i>raise their beer prices</i>.
+Here come the holiday beers.
  <a href="/library/beerlog/">BeerLog</a>.
 
 </div>
@@ -217,7 +217,7 @@ document.write('<IMG SRC="http://oasis.realbeer.com/oasisi.php?s=16&w=120&h=600&
 document.write(' WIDTH=120 HEIGHT=600 BORDER=0></A>');
 document.write('</IFRAME>'); 
 // --> 
-</script><iframe src="http://oasis.realbeer.com/oasisi-i.php?s=16&amp;w=120&amp;h=600&amp;cb=1580357658771" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="120" height="600"><A HREF="http://oasis.realbeer.com/oasisc.php?s=16&w=120&h=600&cb=1580357658771"><IMG SRC="http://oasis.realbeer.com/oasisi.php?s=16&w=120&h=600&cb=1580357658771" WIDTH=120 HEIGHT=600 BORDER=0></A></iframe>
+</script><iframe src="http://oasis.realbeer.com/oasisi-i.php?s=16&amp;w=120&amp;h=600&amp;cb=1580357659619" noresize="" scrolling="NO" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" width="120" height="600"><A HREF="http://oasis.realbeer.com/oasisc.php?s=16&w=120&h=600&cb=1580357659619"><IMG SRC="http://oasis.realbeer.com/oasisi.php?s=16&w=120&h=600&cb=1580357659619" WIDTH=120 HEIGHT=600 BORDER=0></A></iframe>
 <noscript>
 <IFRAME SRC="http://oasis.realbeer.com/oasisi-i.php?s=16&w=120&h=600"
 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0
