--- a/n/no/not/notaryrotary.com.html
+++ b/n/no/not/notaryrotary.com.html
@@ -1,24 +1,19 @@
-<!--The following is the downloaded HTML source of the notaryrotary.com privacy policy that was archived on 2004-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040618074826id_/http%3A//www.notaryrotary.com/privacystatement.asp%3Fid%3D) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the notaryrotary.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206202711id_/http%3A//www.notaryrotary.com/privacystatement.asp%3Fid%3D) for the most accurate reproduction.-->
 
 <html><head>
- <title>Notary Rotary® - Mobile Notary and Signing Agent Directory Database and Resource Tools</title>
+ <title>Notary Rotary™ - Find a Mobile Notary, Become a Signing Agent, Buy Notary Supplies</title>
 
  <meta http-equiv="Pragma" content="no-cache"> 
  <meta http-equiv="Expires" content="-1">
 
- <meta name="DC.title" content="Notary Rotary - Mobile Notary and Signing Agent Directory Database and Resource Tools">
- <meta name="DC.description" content="Notary Rotary - Mobile Notary and Signing Agent Directory Database and Resource Tools">
- <meta name="DC.subject" content="notary, signing service, loan documents, mobile notary, signatures, free notary directory, mortgage, documents, docs, agent, service, notary listing, company ratings, agencies, brokers, free, forums, billing, invoicing, order tracking, secretary of state, rescission period, recission period, rescission calendar, title, companies, loans, Notary Rotary, NotaryRotary, certified, notarize, traveling notary, jurat, acknowledgement, affirmation, oath, contract, affidavit, document signing service, apostilles, signature, identification, id, signature by mark, seal, stamp, travelling notary, convalescent, hospitals, jails, confidential, trustworthy, secure, legal forms, 24 hour, notary database, career, money, profession, title company, title documents, loan closing, notary supplies, notary stamps, notary seals, notary bonds, E&amp;O insurance, inkless thumbprint pads, notary journals, Modern Journal of Notarial Events, The Notary Shop">
- <meta name="DC.creator" content="Notary Rotary, Inc.">
  <meta name="author" content="Notary Rotary, Inc.">
- <meta name="copyright" content="2002, Notary Rotary, Inc.">
+ <meta name="copyright" content="© 2004, Notary Rotary, Inc.">
  <meta name="classification" content="Business and Economy">
  <meta name="rating" content="General">
  <meta name="Revisit-After" content="15 Days">
- <meta name="description" content="Notary Rotary. Online Mobile Notary Resource.">
- <meta name="keywords" content="notary, signing service, loan documents, mobile notary, signatures, free notary directory, mortgage, documents, docs, agent, service, notary listing, company ratings, agencies, brokers, free, forums, billing, invoicing, order tracking, secretary of state, rescission period, recission period, rescission calendar, title, companies, loans, Notary Rotary, NotaryRotary, certified, notarize, traveling notary, jurat, acknowledgement, affirmation, oath, contract, affidavit, document signing service, apostilles, signature, identification, id, signature by mark, seal, stamp, travelling notary, convalescent, hospitals, jails, confidential, trustworthy, secure, legal forms, 24 hour, notary database, career, money, profession, title company, title documents, loan closing, notary supplies, notary stamps, notary seals, notary bonds, E&amp;O insurance, inkless thumbprint pads, notary journals, Modern Journal of Notarial Events, The Notary Shop">
- <meta name="robots" content="ALL">
+ <meta name="description" content="Nationwide mobile notary directory and notary supplies.">
+ <meta name="keywords" content="notary, mobile notary, signing agent, notary supplies, notary stamp, notary seal, bond">
  <meta http-equiv="Content-Language" content="English">
  <meta name="resource-type" content="document"> 
 
@@ -27,18 +22,18 @@
 <body bgcolor="#ffffff" topmargin="0" leftmargin="2" marginheight="0" marginwidth="0">
 
 <table border="0" cellpadding="2" cellspacing="2" width="800">
- <tbody><tr valign="top"><td valign="top" width="50" height="44"><a href="/default.asp"><img src="/images/imgTitle3.gif" border="0" width="358" height="44" alt="Notary Rotary"></a></td><td width="220">&nbsp;</td><td><img src="/images/triangle.gif" border="0" width="12" height="13" alt="Select">&nbsp;&nbsp;<a href="/registerbody.asp">Join</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/login.asp">Login</a></td></tr>
+ <tbody><tr valign="top"><td valign="top" width="50" height="44"><a href="/default.asp"><img src="/images/imgTitle4.gif" border="0" alt="Notary Rotary"></a></td><td width="80">&nbsp;</td><td><a href="/registerbody.asp">Join</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/login.asp">Login</a></td></tr>
 </tbody></table>
 <table border="0" cellpadding="0" cellspacing="0" width="100%" class="Menu">
 <tbody><tr>
  <td><a href="/default.asp"><img src="/images/tab_welcome.gif" border="0" alt="Welcome" width="65" height="29"></a></td>
- <td><a href="/agent/search.asp"><img src="/images/tab_notarysearch.gif" border="0" alt="Notary Search" width="59" height="29"></a></td>
- <td><a href="/forums/forumsbody.asp"><img src="/images/tab_discussionforums.gif" border="0" alt="Discussion Forums" width="76" height="29"></a></td>
- <td><a href="/ratings/ratings.asp"><img src="/images/tab_companylist.gif" border="0" alt="Company List" width="70" height="29"></a></td>
- <td><a href="/store/default.asp"><img src="/images/tab_notarystore.gif" border="0" alt="The Notary Shop" width="82" height="29"></a></td>
+ <td><a href="/agent/search.asp"><img src="/images/tabFindANotary.gif" border="0" alt="Find a Notary" width="70" height="29"></a></td>
+ <td><a href="/forums/forums.asp?id=&amp;forumid=1AAA00000003&amp;action=list&amp;format=threaded"><img src="/images/tabNotaryTalk.gif" border="0" alt="Notary Forum" width="75" height="29"></a></td>
+ <td><a href="/ratings/ratings.asp"><img src="/images/tab_signingservices.gif" border="0" alt="Signing Services" width="76" height="29"></a></td>
+ <td><a href="/store/default.asp"><img src="/images/tab_notarysupplies.gif" border="0" alt="Buy Notary Supplies in The Notary Shop" width="82" height="29"></a></td>
  <td width="900">&nbsp;</td>
 </tr>
-<tr><td class="Sub" colspan="6">&nbsp;</td></tr>
+ <tr><td class="Sub" colspan="6">&nbsp;</td></tr>
 </tbody></table>
 
 		
