--- a/c/ca/cat/catholicmingle.com.html
+++ b/c/ca/cat/catholicmingle.com.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the catholicmingle.com privacy policy that was archived on 2004-06-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040618075831id_/http%3A//www.catholicmingle.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the catholicmingle.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206203126id_/http%3A//www.catholicmingle.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
-	<title>  CATHOLIC SINGLES MINGLE: Online Catholic Dating Services &amp; Personals Network  - 2004-06-18</title>	<meta name="description" content="Catholic Singles Mingle Service. A Catholic singles online meeting place for singles only. Where Catholic men and women create meaningful relationships with other Catholic singles">
+	<title>  CATHOLIC SINGLES MINGLE: Online Catholic Dating Services &amp; Personals Network  - 2004-12-06</title>	<meta name="description" content="Catholic Singles Mingle Service. A Catholic singles online meeting place for singles only. Where Catholic men and women create meaningful relationships with other Catholic singles">
 	<meta name="keywords" content="Catholic singles, catholic dating, catholic online, catholic match maker, catholic personals, single catholic matchmaking, catholic, catholic men, catholic women, catholic singles, catholic dating, catholic personals, dating service, personal ads, personals, free personals, photo personals, american catholic singles, online dating personals, catholic mingle, CatholicMingle.com">
 	<meta name="robots" content="index , all">                                                                
 	<meta name="REVISIT-AFTER" content="7 days">
 	<meta http-equiv="MSThemeCompatible" content="Yes">
-	<link rel="stylesheet" href="/styles/styles_v35.css" type="text/css" media="all">	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="stylesheet" href="/styles/styles_v44.css" type="text/css" media="all">	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div id="header">
@@ -28,13 +28,13 @@
 	</div>
 	<div id="headerNav">	
 		<div id="headerNavHilite"></div>
-		<ul id="headerNavList">
-			<li class="item"><a href="http://www.CatholicMingle.com/singles-signup.html">JOIN NOW</a>&nbsp;&nbsp;&nbsp;|
-			</li><li class="item">&nbsp;&nbsp;&nbsp;<a href="http://www.CatholicMingle.com/pricing.html">PRICING</a>&nbsp;&nbsp;&nbsp;|
-			</li><li class="item">&nbsp;&nbsp;&nbsp;<a href="http://www.CatholicMingle.com/faq.html">FAQ</a>&nbsp;&nbsp;&nbsp;|
-			</li><li class="last">&nbsp;&nbsp;&nbsp;<a href="http://www.CatholicMingle.com/sample.html">SAMPLE PROFILE</a>
-		</li></ul>
-		<div id="headerNavHilite"></div>
+					<ul id="headerNavList">
+				<li class="item"><a href="http://www.CatholicMingle.com/singles-signup.html">JOIN NOW</a>&nbsp;&nbsp;&nbsp;|
+				</li><li class="item">&nbsp;&nbsp;&nbsp;<a href="http://www.CatholicMingle.com/pricing.html">PRICING</a>&nbsp;&nbsp;&nbsp;|
+				</li><li class="item">&nbsp;&nbsp;&nbsp;<a href="http://www.CatholicMingle.com/faq.html">FAQ</a>&nbsp;&nbsp;&nbsp;|
+				</li><li class="last">&nbsp;&nbsp;&nbsp;<a href="http://www.CatholicMingle.com/sample.html">SAMPLE PROFILE</a>
+			</li></ul>
+				<div id="headerNavHilite"></div>
 	</div>
 </div>
 <div id="headerSpace">
@@ -91,7 +91,7 @@
 		2. Send email via the <a href="/contact.html">contact form</a> on the site.<br>
 		3. You can send mail to the following postal address: <br>
 		<br>
-		Catholic Mingle<br>P.O. Box 867<br>Orem, UT 84057-0867<br>
+		Catholic Mingle<br>P.O. Box 739<br>Orem, UT 84059-0739<br>U.S.A.<br>
 		<br>
 		<b>Email Choice/Opt-out</b><br>
 		CatholicMingle.com users may use the following options if they do not wish to receive future communications. <br>
@@ -107,26 +107,30 @@
 		<b>Contacting the Web Site</b><br>
 		If you have any questions about this privacy statement, the practices of this site, or your dealings with the CatholicMingle.com website, you can contact: <br>
 		<br>
-		Catholic Mingle<br>P.O. Box 867<br>Orem, UT 84057-0867<br><br>
+		Catholic Mingle<br>P.O. Box 739<br>Orem, UT 84059-0739<br>U.S.A.<br><br>
 		<br>
 		Or, send email via the <a href="/contact.html">contact form</a> on the site.
 	</div>
 </div>
 <div id="footer">
-<table border="0" cellpadding="0" cellspacing="0" width="760"> 
-	<tbody><tr>
-		<td colspan="9" class="bookends"><img src="/images/spacer.gif" width="1" height="5"></td>
-	</tr>
-	<tr>
-		<td colspan="5" align="center" class="footer"><a href="http://www.CatholicMingle.com/about.html">About</a> | <a href="http://www.CatholicMingle.com/contact.html">Contact</a> | <a href="http://www.CatholicMingle.com/safety.html">Catholic Singles Online Safety</a> | <a href="http://www.CatholicMingle.com/gift_buy.html">Gift Membership</a> | <a href="http://www.CatholicMingle.com/affiliates.html">Affiliates</a> | <a href="http://www.CatholicMingle.com/links.html">Links</a> | <a href="http://www.CatholicMingle.com/privacy.html">Privacy</a> | <a href="http://www.CatholicMingle.com/terms.html">Membership Agreement</a><br>
-		compare: 
+	<div class="bookends" style="height: 5px; font-size: 5px; line-height: 5px;">&nbsp;</div>
+			<p><a href="http://www.CatholicMingle.com/about.html">About</a> | 
+		<a href="http://www.CatholicMingle.com/contact.html">Contact</a> | 
+		<a href="http://www.CatholicMingle.com/safety.html">Catholic Singles Online Safety</a>
+		 | <a href="http://www.CatholicMingle.com/gift_buy.html">Gift Membership</a> | 
+		<a href="http://www.CatholicMingle.com/affiliates.html">Affiliates</a> | 
+		<a href="http://www.CatholicMingle.com/links.html">Links</a> | 
+		<a href="http://www.CatholicMingle.com/privacy.html">Privacy</a> | 
+		<a href="http://www.CatholicMingle.com/terms.html">Membership Agreement</a>
+		</p>
+		<p>compare: 
 <a href="http://www.CatholicMingle.com/compare-avemariasingles.html">avemariasingles.com</a> -
 <a href="http://www.CatholicMingle.com/compare-catholicmatch.html">catholicmatch.com</a> - 
 <a href="http://www.CatholicMingle.com/compare-catholicsingles.html">catholicsingles.com</a>
-<br>		© Copyright 2004 Catholic Mingle. All rights reserved.</td>
-	</tr>
-</tbody></table>
-</div> 
+<br>	
+		© Copyright 2004 Catholic Mingle. All rights reserved.
+		</p>
+	</div> 
 
 
 </body></html>
